--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <html>
-<head>
+  <head>
+    <title>Voice Command Canvas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-	<title>Object Detection</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-  
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  <body>
+    <h3>Voice Command Canvas</h3>
 
-<body backgorund="backgorund.jpg">
-  <center>
-    <h1 class="btn btn-info heading">Object Detection</h1>
-
-    <h3 id="status" class="btn btn-danger"></h3>
-  </center>
-
-  <script src="main.js"></script>
-
-</body>
+    <span id="status"></span> 
+    <button onclick="start()" class="btn btn-success">Draw</button>
+    <br><br>
+<script src="main.js"></script>
+  </body>
 </html>
